Correct PostgreSQL panel: savepoint isolation, catalog-based detection, honest session reporting
Co-authored-by: jdubois <316835+jdubois@users.noreply.github.com>